# heterogenous-system-model

./: .gitignore  CMakeLists.txt  README.md  main.cu  run.sh
include/: AnalysisResult.hpp  Analyzer.hpp  Balancer.hpp  Logger.hpp  Profiler.hpp  Scheduler.hpp  Task.hpp  WorkerManager.hpp
include/kernel/: CPU.hpp  GPU.cuh
include/memory/: BufferManager.cuh  GPUPool.cuh
include/utils/: UUID.hpp  gen.hpp
log/: metrics.json  summary.json  threshold.json
log/regular/: 2025-04-25_00-20-52.json
src/: Analyzer.cpp  Balancer.cpp  Logger.cpp  Profiler.cpp  Scheduler.cpp  WorkerManager.cpp
src/kernel/: CPU.cpp  CPU.cu  GPU.cu
src/memory/: BufferManager.cu  GPUPool.cu
src/utils/: gen.cpp
